<resources>
    <string name="app_name">Menu application</string>

    <string name="menu_title">menu application</string>
    <string name="tables_menu_title">list of my tables</string>
    <string name="orders_menu_title_1">table</string>
    <string name="orders_menu_title_2">orders</string>

    <string name="table_number">Table #</string>
    <string name="table_persons">Persons</string>
    <string name="tables_orders">Opened orders</string>

    <string name="orders_add_order">Add new order</string>

    <string name="txt_edit_item_name">Name</string>
    <string name="txt_edit_item_type">Category</string>
    <string name="txt_edit_item_weight">Weight</string>
    <string name="txt_edit_item_price">Price</string>
    <string name="menu_list_header">Current menu</string>

    <string name="order_list_header">order list of table</string>
    <string name="close_button">close order</string>

</resources>
