<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/colorBkGrdList"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitleTables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:fontFamily="cursive"
        android:gravity="center_horizontal|top"
        android:text="@string/tables_menu_title"
        android:textColor="@color/colorTitleList"
        android:textSize="@android:dimen/app_icon_size" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tablesTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtTableNumber"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/table_number"
                    android:textColor="@color/colorHeaders" />

                <TextView
                    android:id="@+id/txtPersons"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/table_persons"
                    android:textColor="@color/colorHeaders" />

                <TextView
                    android:id="@+id/txtOrders"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/tables_orders"
                    android:textColor="@color/colorHeaders" />

            </TableRow>



        </TableLayout>
    </ScrollView>

</LinearLayout>
