<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="daria.sem4.labworks.menuapp.EditMenuActivity"

    android:background="@color/colorBkGrdList"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="@string/txt_edit_item_name"
                android:textColor="@color/colorEditItem" />

            <EditText
                android:id="@+id/editItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Ice cream" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="cursive"
                android:text="@string/txt_edit_item_type"
                android:textColor="@color/colorEditItem" />

            <Spinner
                android:id="@+id/spnItemType"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="@string/txt_edit_item_weight"
                android:textColor="@color/colorEditItem" />

            <EditText
                android:id="@+id/editItemWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:ems="10"
                android:text="300"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="cursive"
                android:text="@string/txt_edit_item_price"
                android:textColor="@color/colorEditItem" />

            <EditText
                android:id="@+id/editItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:ems="10"
                android:text="200.00"
                android:inputType="numberDecimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnAddItemToMenuList"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="15dp"
        android:text="add" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="wrap_content"
            app:srcCompat="?android:attr/actionModePasteDrawable" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="cursive"
            android:layout_weight="1"
            android:text="@string/menu_list_header"
            android:textColor="@color/colorHeaders" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewAllItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

</LinearLayout>
