<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="daria.sem4.labworks.menuapp.OrdersActivity"

    android:background="@color/colorBkGrdList"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="cursive"
            android:gravity="right|top"
            android:text="@string/orders_menu_title_1"
            android:textColor="@color/colorTitleList"
            android:textSize="@android:dimen/app_icon_size" />

        <TextView
            android:id="@+id/txtTableNumberOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="cursive"
            android:gravity="center_horizontal|top"
            android:text="1"
            android:textColor="@color/colorTitleList"
            android:textSize="@android:dimen/app_icon_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="false"
            android:fontFamily="cursive"
            android:gravity="left|top"
            android:text="@string/orders_menu_title_2"
            android:textColor="@color/colorTitleList"
            android:textSize="@android:dimen/app_icon_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_input_add" />

        <TextView
            android:id="@+id/textView3"
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="cursive"
            android:text="@string/orders_add_order"
            android:textColor="@color/colorHeaders" />

    </LinearLayout>

    <ListView
        android:id="@+id/listViewOrders"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
